fix fancyindex path

--- a/fancyindex/header.html
+++ b/fancyindex/header.html
@@ -8,8 +8,8 @@
         <meta name="author" content="Maxim Llorephie <me@llorephie.org">
         <link rel="icon" href="/favicon.ico">
         <title>Public file directory</title>
-        <link rel="stylesheet" href="./css/bootstrap.min.css">
-        <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./fancyindex/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./fancyindex/css/main.css">
     </head>
 <body>
     <div class="container">
