--- a/fancyindex/footer.html
+++ b/fancyindex/footer.html
@@ -5,9 +5,9 @@
 		    <p class="text-muted">File directory originally hosted on <a href="https://example.org/">example.org</a> using NGINX webserver. Bootstrap adoptation: <a href="https://github.com/llorephie/ngx-fancyindex-theme-bootstrap" rel="noindex,follow">ngx-fancyindex-theme-bootstrap</a> by <a href="https://llorephie.me/" rel="noindex,follow">Maxim Llorephie</a>.</p>
     </div>
 </footer>
-<script src="./js/jquery-3.3.1.slim.min.js"></script>
-<script src="./js/bootstrap.min.js"></script>
-<script src="./js/main.js"></script>
+<script src="./fancyindex/js/jquery-3.3.1.slim.min.js"></script>
+<script src="./fancyindex/js/bootstrap.min.js"></script>
+<script src="./fancyindex/js/main.js"></script>
 
 </body>
 </html>
