fix fancyindex name

--- a/fancyindex/footer.html
+++ b/fancyindex/footer.html
@@ -2,12 +2,12 @@
 </div>
 <footer class="footer">
     <div class="container">
-		    <p class="text-muted">File directory originally hosted on <a href="https://example.org/">example.org</a> using NGINX webserver. Bootstrap adoptation: <a href="https://github.com/llorephie/ngx-fancyindex-theme-bootstrap" rel="noindex,follow">ngx-fancyindex-theme-bootstrap</a> by <a href="https://llorephie.me/" rel="noindex,follow">Maxim Llorephie</a>.</p>
+		    <p class="text-muted">开发者资源共享服务<a href="https://static.guanqi.xyz/cdn/">static.guanqi.xyz/cdn/</a> 使用nginx服务 Bootstrap适配: <a href="https://github.com/llorephie/ngx-fancyindex-theme-bootstrap" rel="noindex,follow">ngx-fancyindex-theme-bootstrap</a> by <a href="https://llorephie.me/" rel="noindex,follow">Maxim Llorephie</a>.</p>
     </div>
 </footer>
-<script src="./fancyindex/js/jquery-3.3.1.slim.min.js"></script>
-<script src="./fancyindex/js/bootstrap.min.js"></script>
-<script src="./fancyindex/js/main.js"></script>
+<script src="/cdn/fancyindex/js/jquery-3.3.1.slim.min.js"></script>
+<script src="/cdn/fancyindex/js/bootstrap.min.js"></script>
+<script src="/cdn/fancyindex/js/main.js"></script>
 
 </body>
 </html>
