fix fancyindex theme

--- a/fancyindex/footer.html
+++ b/fancyindex/footer.html
@@ -2,7 +2,8 @@
 </div>
 <footer class="footer">
     <div class="container">
-		    <p class="text-muted">开发者资源共享服务<a href="https://static.guanqi.xyz/cdn/">static.guanqi.xyz/cdn/</a> 使用nginx服务 Bootstrap适配: <a href="https://github.com/llorephie/ngx-fancyindex-theme-bootstrap" rel="noindex,follow">ngx-fancyindex-theme-bootstrap</a> by <a href="https://llorephie.me/" rel="noindex,follow">Maxim Llorephie</a>.</p>
+        <p class="text-muted">&copy; 2021 <a href="https://static.guanqi.xyz/cdn/">开发者资源共享服务</a> 版权所有 侵权必究</p>
+        <p><a href="https://github.com/llorephie/ngx-fancyindex-theme-bootstrap">Design Theme</a> By <a href="https://llorephie.me/">Maxim Llorephie</a></p>
     </div>
 </footer>
 <script src="/cdn/fancyindex/js/jquery-3.3.1.slim.min.js"></script>
@@ -10,6 +11,7 @@
 <script src="/cdn/fancyindex/js/main.js"></script>
 
 </body>
+
 </html>
 <!--# endblock -->
 <!--# include virtual="$request_uri/.directory_footer.html" stub="default_footer" -->
