--- a/fancyindex/header.html
+++ b/fancyindex/header.html
@@ -1,39 +1,42 @@
 <!--# block name="default_index" -->
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Public file directory.">
-        <meta name="author" content="Maxim Llorephie <me@llorephie.org">
-        <link rel="icon" href="/favicon.ico">
-        <title>开发者资源共享服务 - 万有文件</title>
-        <link rel="stylesheet" href="/cdn/fancyindex/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/cdn/fancyindex/css/main.css">
-    </head>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Public file directory.">
+  <meta name="author" content="Maxim Llorephie <me@llorephie.org">
+  <link rel="icon" href="/favicon.ico">
+  <title>开发者资源共享服务 - 万有文件</title>
+  <link rel="stylesheet" href="/cdn/fancyindex/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/cdn/fancyindex/css/main.css">
+</head>
+
 <body>
-    <div class="container">
+  <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">开发者资源共享服务</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarContent">
-          <ul class="navbar-nav mr-auto">
-          	<li class="nav-item"><a class="nav-link" href="/cdn/">主页</a></li>
-            <li class="nav-item"><a class="nav-link" href="mailto:contact@guanqi.xyz">联系我们</a></li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <div class="form-group">
-              <input id="search" type="text" class="form-control mr-sm-2" placeholder="搜索静态库...">
-            </div>
-          </form>
-        </div>
+      <a class="navbar-brand" href="/">开发者资源共享服务</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
+        aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item"><a class="nav-link" href="/cdn/">主页</a></li>
+          <li class="nav-item"><a class="nav-link" href="mailto:contact@guanqi.xyz">联系我们</a></li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <div class="form-group">
+            <input id="search" type="text" class="form-control mr-sm-2" placeholder="搜索静态库...">
+          </div>
+        </form>
+      </div>
     </nav>
     <nav aria-label="breadcrumb" class="mt-5">
       <ol id="breadcrumbs" class="breadcrumb">
       </ol>
     </nav>
-<!--# endblock -->
-<!--# include virtual="$request_uri/.directory_index.html" stub="default_index" -->
-<h1 id="nginx-fancyindex-directory" class="d-none">
+    <!--# endblock -->
+    <!--# include virtual="$request_uri/.directory_index.html" stub="default_index" -->
+    <h1 id="nginx-fancyindex-directory" class="d-none">
