--- a/fancyindex/footer.html
+++ b/fancyindex/footer.html
@@ -9,7 +9,11 @@
 <script src="/cdn/fancyindex/js/jquery-3.3.1.slim.min.js"></script>
 <script src="/cdn/fancyindex/js/bootstrap.min.js"></script>
 <script src="/cdn/fancyindex/js/main.js"></script>
-
+<noscript>
+    <!-- Matomo Image Tracker-->
+    <img referrerpolicy="no-referrer-when-downgrade" src="https://am.guanqi.xyz/matomo.php?idsite=15&amp;rec=1" style="border:0" alt="" />
+    <!-- End Matomo -->
+</noscript>
 </body>
 
 </html>
