--- a/fancyindex/footer.html
+++ b/fancyindex/footer.html
@@ -2,13 +2,13 @@
 </div>
 <footer class="footer">
     <div class="container">
-        <p class="text-muted">&copy; 2021 <a href="https://static.guanqi.xyz/cdn/">开发者资源共享服务</a> 版权所有 侵权必究</p>
+        <p class="text-muted">&copy; 2021 <a href="https://static.guanqi.xyz/">开发者资源共享服务</a> 版权所有 侵权必究</p>
         <p class="text-muted"><a href="https://github.com/llorephie/ngx-fancyindex-theme-bootstrap">Design Theme</a> By <a href="https://llorephie.me/">Maxim Llorephie</a></p>
     </div>
 </footer>
-<script src="/cdn/fancyindex/js/jquery-3.3.1.slim.min.js"></script>
-<script src="/cdn/fancyindex/js/bootstrap.min.js"></script>
-<script src="/cdn/fancyindex/js/main.js"></script>
+<script src="/fancyindex/js/jquery-3.3.1.slim.min.js"></script>
+<script src="/fancyindex/js/bootstrap.min.js"></script>
+<script src="/fancyindex/js/main.js"></script>
 <noscript>
     <!-- Matomo Image Tracker-->
     <img referrerpolicy="no-referrer-when-downgrade" src="https://am.guanqi.xyz/matomo.php?idsite=15&amp;rec=1" style="border:0" alt="" />
