--- a/fancyindex/footer.html
+++ b/fancyindex/footer.html
@@ -2,7 +2,7 @@
 </div>
 <footer class="footer">
     <div class="container">
-        <p class="text-muted">&copy; 2021 <a href="https://static.guanqi.fun/">静态资源库</a> 版权所有 侵权必究</p>
+        <p class="text-muted">&copy; 2021 <a href="https://static.guanqi.xyz/">XQCDN</a> All Rights Reserved.</p>
         <p class="text-muted"><a href="https://github.com/llorephie/ngx-fancyindex-theme-bootstrap">Design Theme</a> By <a href="https://llorephie.me/">Maxim Llorephie</a></p>
     </div>
 </footer>
