--- a/fancyindex/header.html
+++ b/fancyindex/header.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">静态资源库</a>
+      <a class="navbar-brand" href="/">XQCDN - 简易静态资源库</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
         aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
