--- a/fancyindex/header.html
+++ b/fancyindex/header.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Public file directory.">
   <meta name="author" content="Maxim Llorephie <me@llorephie.org">
   <link rel="icon" href="/favicon.ico">
-  <title>静态资源库</title>
+  <title>XQCDN - 简易静态资源库</title>
   <link rel="stylesheet" href="/fancyindex/css/bootstrap.min.css">
   <link rel="stylesheet" href="/fancyindex/css/main.css">
 </head>
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">XQCDN - 简易静态资源库</a>
+      <a class="navbar-brand" href="/">XQCDN</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
         aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
