--- a/fancyindex/header.html
+++ b/fancyindex/header.html
@@ -11,6 +11,7 @@
   <title>XQCDN - 简易静态资源库</title>
   <link rel="stylesheet" href="/fancyindex/css/bootstrap.min.css">
   <link rel="stylesheet" href="/fancyindex/css/main.css">
+  <script src="/libs/xqmourn/0.0.1/js/xqmourn.min.js"></script>
 </head>
 
 <body>
