--- a/fancyindex/header.html
+++ b/fancyindex/header.html
@@ -11,7 +11,7 @@
   <title>XQCDN - 简易静态资源库</title>
   <link rel="stylesheet" href="/fancyindex/css/bootstrap.min.css">
   <link rel="stylesheet" href="/fancyindex/css/main.css">
-  <script src="/libs/xqmourn/0.0.1/js/xqmourn.min.js"></script>
+  <script src="/libs/xqgjs/1.0.5/mourn/mourn.min.js" id="xqmourn"></script>
 </head>
 
 <body>
